# shaenc

./: Makefile.am  configure.in  libsha1.cpp  libsha1.h  sha1enc.cpp
