AC_INIT(libsha1, 0.0.1f)
AC_CONFIG_SRCDIR(libsha1.cpp)
AM_INIT_AUTOMAKE(dist-bzip2)
dnl AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_CONFIG_HEADER(config.h)
AC_LANG_CPLUSPLUS
AC_C_BIGENDIAN

AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debug info.],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=true])
AM_CONDITIONAL(NDEBUG, test x$debug = xfalse)

dnl files to be generated
AC_OUTPUT(Makefile)
